# HELWFEM

./: .gitignore  LICENSE.md  README.md
src/: CMakeLists.txt  Makefile  assembly.cpp  assembly.h  boundary.cpp  boundary.h  element.cpp  element.h  main.cpp
test/: Makefile  README  test.h  testElement.cpp
test/log/: testElement_2013-12-29-07-57-07.xml  testElement_2013-12-30-23-12-53.xml  testElement_2013-12-31-02-55-26.xml  testElement_2013-12-31-12-59-56.xml
